<resources>
    <string name="app_name">GitHub\'s User Search </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="searchbar_placeholder">Search some user</string>
    <string name="no_search_first_line">There’s nothing to show right now.</string>
    <string name="no_search_second_line">Try to search user(s) with search bar above.</string>
    <string name="nama">Andrew Jonatan Damanik</string>
    <string name="username">endruu123</string>

    <string name="followersCount">%d Followers</string>
    <string name="followingCount">%d Following</string>

    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="divider">•</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="detail">Detail</string>
    <string name="favorite">Favorite</string>
    <string name="night_theme">Night Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
</resources>