<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layoutDescription="@xml/activity_detail_user_scene">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/profile_avatar_loading_w"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/black_bg_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile"
        tools:text="@string/nama" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/font_color_variant1_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="@string/username" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username">

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:textColor="@color/item_black_bg2_dark"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/baseline_people_outline_24"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="196dp"
            tools:text="@string/followersCount" />

        <TextView
            android:id="@+id/tv_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center_horizontal"
            android:paddingHorizontal="8dp"
            android:text="@string/divider"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="196dp" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:textColor="@color/item_black_bg2_dark"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="196dp"
            tools:text="@string/followingCount" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:tabIndicatorColor="@color/blue"
        app:tabSelectedTextColor="@color/blue"
        app:tabTextColor="@color/item_black_bg2_dark" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ProgressBar
        android:id="@+id/pb_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="32dp"
        app:tint="@color/unfavorite" />

</androidx.constraintlayout.motion.widget.MotionLayout>